--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
-    "dev": "npx nodemon src/app.ts"
+    "dev": "npx nodemon src/app.ts",
+    "build": "tsc",
+	  "start": "node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +28,10 @@
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.24",
     "@types/pg": "^8.6.5",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "eslint": "^8.13.0",
+    "eslint-config-prettier": "^8.5.0",
     "nodemon": "^2.0.15",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
